# aiome

./: .env.example  .gitignore  AGENTS.md  AIOME.md  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EVOLVING_SOUL.bak.20260312_001435  EVOLVING_SOUL.bak.20260312_001549  EVOLVING_SOUL.bak.20260312_001657  EVOLVING_SOUL.bak.20260312_001958  EVOLVING_SOUL.bak.20260312_002359  EVOLVING_SOUL.bak.20260312_002501  EVOLVING_SOUL.bak.20260312_002602  EVOLVING_SOUL.bak.20260312_002805  EVOLVING_SOUL.bak.20260312_003109  EVOLVING_SOUL.bak.20260312_003212  EVOLVING_SOUL.bak.20260312_003513  EVOLVING_SOUL.bak.20260312_004217  EVOLVING_SOUL.bak.20260312_004318  EVOLVING_SOUL.bak.20260312_004429  EVOLVING_SOUL.bak.20260312_004536  EVOLVING_SOUL.bak.20260312_004641  EVOLVING_SOUL.bak.20260312_005151  EVOLVING_SOUL.bak.20260312_005257  EVOLVING_SOUL.bak.20260312_005400  EVOLVING_SOUL.bak.20260312_005504  EVOLVING_SOUL.bak.20260312_005606  EVOLVING_SOUL.bak.20260312_005913  EVOLVING_SOUL.bak.20260312_010015  EVOLVING_SOUL.bak.20260312_010517  EVOLVING_SOUL.bak.20260312_010619  EVOLVING_SOUL.bak.20260312_010722  EVOLVING_SOUL.bak.20260312_010824  EVOLVING_SOUL.bak.20260312_011129  EVOLVING_SOUL.bak.20260312_011637  EVOLVING_SOUL.bak.20260312_012004  (+214 more)
.agent/skills/: clouddoc-vibe-master.md  css-architecture.md  security-guardrails.md
.agent/workflows/: VIBE_WORKFLOW.md  red-team.md  task.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit-trail.yml  ci.yml  formal-verify.yml
.openclaw/: workspace-state.json
apps/aiome-daemon/: Cargo.toml
apps/aiome-daemon/src/: main.rs
apps/api-server/: Cargo.toml
apps/api-server/src/: api.rs  api_integration_tests.rs  auth.rs  error.rs  logging.rs  main.rs  skill_handler.rs  stream.rs
apps/api-server/src/docker/: delegator.rs  karma_bridge.rs  mod.rs
apps/api-server/src/mcp/: client.rs  discovery.rs  mod.rs  server.rs  types.rs
apps/api-server/src/routes/: agent.rs  artifacts.rs  biome.rs  expression.rs  general.rs  karma.rs  mod.rs  settings.rs  skill.rs  watchtower.rs
apps/api-server/static/: index.html
apps/api-server/workspace/forge/: Cargo.toml
apps/api-server/workspace/forge/src/: lib.rs
apps/api-server/workspace/forge_workspaces/greet_skill/: Cargo.toml  forge.sb  test.sb
apps/api-server/workspace/forge_workspaces/greet_skill/src/: lib.rs
apps/api-server/workspace/skills/custom/: greet_skill.meta.json
apps/key-proxy/: Cargo.toml
apps/key-proxy/src/: main.rs
apps/management-console/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/samsara-hub/: Cargo.toml
apps/samsara-hub/src/: hub_ws_tests.rs  main.rs
apps/shorts-factory/: Cargo.toml
apps/shorts-factory/src/: arbiter.rs  asset_manager.rs  job_worker.rs  main.rs  orchestrator.rs  simulator.rs  supervisor.rs
apps/shorts-factory/src/server/: cron.rs  mod.rs  router.rs  telemetry.rs  watchtower.rs
apps/watchtower/: Cargo.toml
apps/watchtower/src/: main.rs
docker/: production.Dockerfile
docs/: ABYSS_VAULT_SECURITY.md  ARCHITECTURE_LAW.md  AVATAR_SYSTEM_SPEC.md  CHANNEL_SETUP_GUIDE.md  CLOUD_DOCUMENTATION.md  CODE_WIKI.md  CUSTOMIZING_SOUL.md  EVOLUTION_STRATEGY.md  LAYOUT_ARCHITECTURE.md  OPERATIONS_MANUAL.md  PRO_SECURITY_WHITEPAPER.md  SECURITY_DESIGN.md  SECURITY_WHITEPAPER.md  SKILLS_MANUAL.md  SKILL_FORGE_SPEC.md  WATCHTOWER_CHAT_SPEC.md  WATCHTOWER_USER_GUIDE.md  openapi.json
libs/bastion/: Cargo.toml
libs/bastion/src/: common.rs  fs_guard.rs  guardrails.rs  init.rs  lib.rs  main.rs  net_guard.rs  python_check.rs  scanner.rs  text_guard.rs
libs/bastion/templates/: guardrails_template.rs
libs/core/: Cargo.toml
libs/core/src/: budget.rs  commerce.rs  contracts.rs  error.rs  lib.rs  llm_provider.rs  traits.rs
libs/core/src/biome/: autonomous.rs  delegation.rs  dialogue.rs  mod.rs  protocol.rs
libs/core/src/expression/: engine.rs  mod.rs
libs/infrastructure/: Cargo.toml
libs/infrastructure/src/: aiome_log.rs  artifact_store.rs  circuit_breaker.rs  comfy_bridge.rs  concept_manager.rs  context_engine.rs  dream_state.rs  factory_log.rs  heartbeat_wakeup.rs  immune_system.rs  job_queue.rs  job_queue_tests.rs  knowledge_indexer.rs  lib.rs  media_forge.rs  memory_crystallizer.rs  oracle.rs  security.rs  skill_arena.rs  slo_engine.rs  sns_watcher.rs  soul_mutator.rs  sound_mixer.rs  trend_sonar.rs  user_learner.rs  validator.rs  voice_actor.rs  workspace_manager.rs  workspace_manager_tests.rs
libs/infrastructure/src/channel_bridge/: bridge_trait.rs  discord.rs  mod.rs  telegram.rs
libs/infrastructure/src/job_queue/: core_ops.rs  crdt.rs  evaluation.rs  evolution.rs  expression.rs  federation.rs  guardrails.rs  karma.rs  karma_maintenance.rs  migrations.rs  mod.rs  settings.rs  swarm.rs  taxonomy.rs  tests.rs  watchtower.rs
libs/infrastructure/src/llm/: mod.rs  ollama.rs  proxy.rs
libs/infrastructure/src/publisher/: mock_x.rs  mod.rs
libs/infrastructure/src/skills/: actions_importer.rs  cleanroom.rs  forge.rs  importer.rs  mod.rs  skill_arena.rs  tests.rs
libs/infrastructure/tests/: biome_test.rs  immune_system_tests.rs  mbt_quarantine.rs  zero_trust.rs
libs/napi-bridge/: Cargo.toml  build.rs
libs/napi-bridge/src/: lib.rs  state.rs
libs/shared/: Cargo.toml
libs/shared/src/: cleaner.rs  config.rs  guardrails.rs  health.rs  lib.rs  os_utils.rs  output_validator.rs  sandbox.rs  security.rs  watchtower.rs  zombie_killer.rs
scripts/: apply_license.sh  com.aiome.daemon.plist  ex_machina_audit.sh  generate_architecture.py  generate_docs.py  install_hooks.sh  secure_start.sh  setup_secrets.sh  test_all.sh  update_headers.py
specs/: AIOME_VISION_MANIFESTO.md  AiomeContextEngine.cfg  AiomeContextEngine.tla  AiomeContextEngine_TTrace_1772960605.tla  AiomeQuarantineProtocol.cfg  AiomeQuarantineProtocol.tla  SamsaraFederationProtocol.tla  SamsaraKarmaProtocol.cfg  SamsaraKarmaProtocol.tla  TRACE_MAP.md
tests/: bft_attack_sim.sh  swarm_load_test.sh  swarm_simulation_test.sh
(+75 files in other folders)
