[workspace]
members = [
    "apps/api-server",
    "apps/samsara-hub",
    "apps/key-proxy",
    "libs/core",
    "libs/infrastructure",
    "libs/shared",
    "libs/wasm-skills/fs_reader",
    "libs/wasm-skills/terminal_exec",
    "libs/wasm-skills/fs_writer", "libs/napi-bridge",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
rig-core = { version = "0.30", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
config = "0.14"
schemars = "0.8"
unicode-normalization = "0.1"
nix = { version = "0.27", features = ["process", "signal", "user", "fs"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
secrecy = { version = "0.8", features = ["serde"] }
jsonschema = "0.17"
tower = { version = "0.4", features = ["limit"] }
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
