[package]
name = "aiome-daemon"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
aiome_core = { path = "../../libs/core", package = "aiome-core" }
infrastructure = { path = "../../libs/infrastructure" }
shared = { path = "../../libs/shared" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = "0.15"
config = "0.14"
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
