[package]
license = "MIT"
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
aiome_core = { path = "../../libs/core", package = "aiome-core" }
infrastructure = { path = "../../libs/infrastructure" }
shared = { path = "../../libs/shared" }
tokio = { workspace = true }
axum.workspace = true
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
