[package]
license = "ELv2"
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
aiome_core = { path = "../../libs/core", package = "aiome-core" }
infrastructure = { path = "../../libs/infrastructure" }
shared = { path = "../../libs/shared" }
tokio = { workspace = true }
axum.workspace = true
tower-http = { version = "0.5", features = ["fs", "cors", "set-header", "limit"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
regex = "1.10"
subtle = "2.5.0"
tower = { version = "0.4", features = ["limit", "util", "buffer"] }
futures = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"
url = "2.5.8"
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
nix.workspace = true
sqlx.workspace = true
ed25519-dalek = "2.1"
base64 = "0.22"
mime_guess = "2.0"
bastion = { package = "bastion-core", git = "https://github.com/for4xex-droid/bastion.git", branch = "main", features = ["net", "fs"] }
utoipa = "5"
utoipa-swagger-ui = { version = "8", features = ["axum"] }
dotenvy = "0.15"

[dev-dependencies]
axum-test = "16"
tempfile = "3.27.0"
wiremock = { workspace = true }
