[package]
name = "samsara-hub"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "auth"] }
anyhow = "1.0"
secrecy = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
reqwest = { version = "0.12", features = ["json"] }
aiome-core = { path = "../../libs/core" }
shared = { path = "../../libs/shared" }
infrastructure = { path = "../../libs/infrastructure" }
# Ensure tracing-subscriber has json for production logs
tower = { version = "0.4", features = ["limit", "buffer", "util"] }
