[package]
name = "samsara-hub"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "auth"] }
anyhow = "1.0"
secrecy = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
reqwest = { version = "0.12", features = ["json"] }
aiome-core = { path = "../../libs/core" }
shared = { path = "../../libs/shared" }
infrastructure = { path = "../../libs/infrastructure" }
# Ensure tracing-subscriber has json for production logs
tower = { version = "0.4", features = ["limit", "buffer", "util"] }
subtle = "2.5.0"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"
tokio-util = { version = "0.7", features = ["rt"] }
ed25519-dalek = "2.1.1"
base64 = "0.22.1"
automerge = { workspace = true }

[dev-dependencies]
futures-util = "0.3.32"
tokio-tungstenite = "0.28.0"
wiremock = { workspace = true }
