[package]
license = "AGPL-3.0-only"
name = "watchtower"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sysinfo = { workspace = true }
nix = { workspace = true }
tokio-util = { workspace = true }
bytes = "1.0"
futures = "0.3"
chrono = "0.4"
shared = { path = "../../libs/shared" }
config = { workspace = true }
uuid = { workspace = true }
dotenv = "0.15"

[dev-dependencies]
