[package]
license = "MIT"
name = "aiome-core"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
async-trait = "0.1"
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bastion = { package = "bastion-core", git = "https://github.com/for4xex-droid/bastion.git", branch = "main", features = ["fs"] }
chrono = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
contracts = "0.6.7"
futures = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
