[package]
license = "AGPL-3.0-only"
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
factory_core = { path = "../core", package = "factory-core" }
tuning = { path = "../tuning" }
shared = { path = "../shared" }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
async-trait = "0.1"
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rig-core = { workspace = true }
schemars = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
bastion = { path = "../bastion", features = ["net", "fs"] }
tokio-tungstenite = "0.28.0"
rand = "0.10.0"
futures-util = "0.3.32"
chrono.workspace = true
regex = "1.12.3"
async-recursion = "1.1.1"
unicode-normalization = { workspace = true }
extism = "1.13.0"
extism-convert = "1.13.0"
wasi = "0.14.7"
tokio-util = { workspace = true, features = ["codec", "io"] }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

