[package]
license = "MIT"
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
aiome_core = { path = "../core", package = "aiome-core" }
# tuning = { path = "../tuning" } (Moved to commercial repo)
shared = { path = "../shared" }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
async-trait = "0.1"
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
bastion = { package = "bastion-core", git = "https://github.com/for4xex-droid/bastion.git", branch = "main", features = ["net", "fs"] }
chrono.workspace = true
regex = "1.12.3"
async-recursion = "1.1.1"
unicode-normalization = { workspace = true }
extism = "1.13.0"
extism-convert = "1.13.0"
wasi = "0.14.7"
tokio-util = { workspace = true, features = ["codec", "io"] }
secrecy = { workspace = true }
jsonschema = { workspace = true }
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22"
rand = "0.8"
contracts = "0.6.7"
serde_yaml = "0.9"
automerge = { workspace = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http"] }
teloxide = { version = "0.13", features = ["macros"] }
once_cell = { workspace = true }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
futures = "0.3"

