[package]
name = "napi-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.14", features = ["async", "tokio_rt", "napi4", "serde-json"] }
napi-derive = "2.16.12"
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
regex = "1.10"
uuid = { version = "1.0", features = ["v4"] }

aiome-core = { path = "../core", package = "aiome-core" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

[build-dependencies]
napi-build = "2.1.3"
