[package]
license = "BUSL-1.1"
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = "1.10"
tokio = { workspace = true }
reqwest = { workspace = true }
sysinfo.workspace = true
tracing = { workspace = true }
nix = { workspace = true }
tokio-util = { workspace = true }
bastion = { package = "bastion-core", git = "https://github.com/for4xex-droid/bastion.git", branch = "main", features = ["fs", "net"] }
anyhow = { workspace = true }
config = { workspace = true }
utoipa = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
serial_test = { workspace = true }
